--- a/index.html
+++ b/index.html
@@ -2566,7 +2566,7 @@ function setInitialRect() {
 				id="centerform"></div>
 			<div style="position: absolute; top: 5px; right: 10px;">
 				<font size="2"><a
-					href="http://portal.cyberjapan.jp/help/termsofuse.html"
+					href="http://www.gsi.go.jp/kikakuchousei/kikakuchousei40182.html"
 					target="_blank">利用規約</a>｜<a
 					href="http://portal.cyberjapan.jp/help/howtouse.html" target="_blank">ヘルプ</a>｜<a
 					href="http://portal.cyberjapan.jp/help/development.html"
